# pi-pianoteq

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  INSTRUMENTS.md  LICENSE  MANIFEST.in  PLAN.md  PRESET_MENU_IMPLEMENTATION.md  Pipfile  README.md  SYSTEMD.md  TESTING.md  deploy.conf.example  deploy.sh  example_client.py  main.cpp  pi-pianoteq.service  pi-pianoteq.service.template  pi_pianoteq.service  pi_pianoteq.service.template  presets  pyproject.toml  run_tests.py  setup.py  todo
.github/workflows/: docs.yml  release.yml  test.yml
config/: Piqnoteq65 STAGE.prefs
config/MidiMappings/hex/: Full-featured Test Mapping.hex  Test Mapping CC PC 10 5 Load Preset.hex  Test Mapping CC PC MMC Bend Aftertouch.hex  Test Mapping Dialect Auto.hex  Test Mapping Dialect Disklavier.hex  Test Mapping Dialect Hi-Res.hex  Test Mapping Dialect Standard Midi.hex  Test Mapping Load Presets.hex  Test Mapping Map To Lots.hex  Test Mapping Notes Channel 1.hex  Test Mapping Notes Channel 10.hex  Test Mapping Notes Channel 16.hex  Test Mapping Notes Transposition 10.hex  Test Mapping PC 10 11 Load Presets SDCH.hex  Test Mapping PC 10 Load Preset SDC.hex
config/MidiMappings/ptm/: 1 Row.ptm  2 Rows.ptm  Full-featured Test Mapping.ptm  (+23 more)
docs/: README_LINUX.txt  cli-refactoring-notes.md  development.md  issue-15-investigation.md  pianoteq-api-implementation.md  pianoteq-api.md  requirements.txt  testing-strategy.md
docs/source/: api.rst  conf.py  data-models.rst  example.rst  guide.rst  index.rst
pi-pianoteq/: __main__.py  test_rtmidi.py
pi-pianoteq/instrument/: Preset.py
pi-pianoteq/mapping/: Writer.py  mapping.py
pi-pianoteq/midi/: ProgramChange.py
pi_pianoteq/: __main__.py  config.py  constants.py  instruments.json  jsonrpc_client.py  logging_config.py  pi_pianoteq.conf  test_rtmidi.py
pi_pianoteq/client/: Client.py  ClientApi.py  client.py
pi_pianoteq/config/: config.py
pi_pianoteq/instrument/: Instrument.py  Library.py  Preset.py  Selector.py  instrument.py  instruments  selector.py
pi_pianoteq/lib/: ClientLib.py  client_lib.py
pi_pianoteq/mapping/: Writer.py  mapping.py
pi_pianoteq/midi/: ProgramChange.py  midi_exception.py
pi_pianoteq/process/: Pianoteq.py
pi_pianoteq/rpc/: jsonrpc_client.py
pi_pianoteq/test/: testPresets.py  test_config.py  test_jsonrpc_client.py  test_presets.py
pi_pianoteq/util/: __init__.py
rtmidi/: CMakeLists.txt  Probe.cpp  Probe.h  main.cpp
rtmidi-tests/: cmidiin.cpp  midiclock.cpp  midiout.cpp  qmidiin.cpp
rtmidi/rtmidi-tests/: apinames.cpp  midiprobe.cpp  sysextest.cpp
src/: constants.py  parse_presets.py  requirements.txt  startup.py
src/client/: Client.py  ClientApi.py
src/instrument/: Instrument.py  Library.py  Preset.py  library.py  presets.py
src/lib/: ClientLib.py
src/mapping/: MappingBuilder.py  Writer.py  mapping.py  mapping_format
src/midi/: ProgramChange.py  util.py
src/midimapping/: mapping.py  mapping_format
src/pi_pianoteq/: __main__.py  config.py
src/process/: Pianoteq.py
src/test/: testPresets.py
tests/: README.md  conftest.py  test_button_debouncer.py  test_button_suppression.py  test_gfxhat_state_machine.py  test_preset_menu_display.py
tests/client/: test_discovery.py
tests/config/: test_config.py
tests/instrument/: test_presets.py  test_selector.py
tests/lib/: test_client_lib.py
tests/logging/: test_logging_config.py
tests/process/: test_pianoteq.py
tests/rpc/: test_jsonrpc_client.py
tests/state/: __init__.py  test_state_monitor.py
tests/util/: test_preset_names.py
(+84 files in other folders)
